my refinements done for all sections

--- a/concl.tex
+++ b/concl.tex
@@ -8,21 +8,27 @@
 
 Our journey through ideologies of automation and driverless vehicle
 development has taken us from an explication of the dominant narrative
-of the ``self-driving'' vehicle, through an examination of what this
+of the ``self-driving'' vehicle and its histories, through an examination of what it
 might mean for our society, to an investigation of an alternative
-narrative and the real histories that support that narrative. What
+paradigm for thinking about automation. What
 should be clear from this thesis, but which must be made clearer in the
 public discourse about increasingly automated technologies, is that a
 movement from human systems, through hybrid systems, to fully
 autonomous systems is not inevitable. It is not a
 requirement of technological progress, but one narrative among many
-which depends not only on technological, and in many cases 
+which depends on technological, and often 
 infrastructural, progress as well as a mischaracterization of what
 ``full'' autonomy is. However, this narrative
 presents a convenient cover story for the economic objectives of
 organizations involved in automating the car.
 
 \section{Reshaping the Road: A Last Lesson in History}
+
+
+%% ``In the early days of the automobile, it was
+%% drivers' job to avoid you, not your job to avoid them,'' describes
+%% Peter Norton, the author of \emph{Fighting Traffic}
+%% \cite{voxNorton}.
 
 We often take for granted that cars have separate spaces on
 the roadway and interact with pedestrians in a controlled
@@ -34,12 +40,6 @@ fashion.\footnote{This is not, however, to minimize the human
 time when city streets were not primarily the venue of the automobile,
 but were mixed-use areas where children played, vendors sold goods,
 and adults walked, talked, biked, and gathered socially. 
-
-%% ``In the early days of the automobile, it was
-%% drivers' job to avoid you, not your job to avoid them,'' describes
-%% Peter Norton, the author of \emph{Fighting Traffic}
-%% \cite{voxNorton}.
-
 This caused problems for the drivers and
 manufacturers of fast moving, dangerous vehicles, which all too
 frequently inflicted bodily harm on those people with which they
@@ -92,29 +92,28 @@ children.
 %% shift motivated by a new technology, but it would be wrong to say it
 %% was caused by the automobile. Instead, a
 
-The deaths of children at the hands of
+In an attempt to change this, street games were turned into
+criminal offenses by around 1914, but fatalities kept increasing nonetheless \cite[p.
+  38]{zelizer}. The deaths of children at the hands of
 automobiles were not solely placed on the shoulders of drivers. As the
 death rate became a national crisis, the
-early press ``pinned most of the blame on parents'': modern life, it
+press ``pinned most of the blame on parents'': modern life, it
 was said, ``cannot be retarded to enable heedless children to get out
-of the way'' \cite[p. 37]{zelizer}. Street games were turned into
-criminal offenses by around 1914, and the police arrested many
-children, but fatalities kept increasing nonetheless \cite[p.
-  38]{zelizer}. The homogenization of the road
-for ``transit'' \cite[p. 73]{lochlannjain} involved not only
-pressures on families to keep their children out of the street, but a
-concerted legal and public relations campaign for automobile-friendly
-traffic laws organized by automakers concerned about automotive speed
-governors \cite{voxNorton}. To attempt to
-compensate for laws that were rarely followed and enforced,
-auto-friendly groups worked to change the public dialogue.\footnote{Articles
+of the way'' \cite[p. 37]{zelizer}. This was not by accident.\footnote{Articles
 ghostwritten by the National Automobile Chamber of Commerce shifted
 the blame for traffic accidents to pedestrians; the AAA sponsored
 safety campaigns in schools; and police and citizens were called upon
 to shame transgressors in order to set new public standards---even the
 name for the infraction, ``jay-walking,'' was intended to create
 public opprobrium for the supposed ``hicks'' who did not know how to
-behave in cities, and to shift blame to them \cite{voxNorton}.}
+behave in cities, and to shift blame to them \cite{voxNorton}.} The homogenization of the road
+for ``transit'' \cite[p. 73]{lochlannjain} involved not only
+pressures on families to keep their children out of the street, but a
+concerted legal and public relations campaign for automobile-friendly
+traffic laws organized by automakers concerned about automotive speed
+governors \cite{voxNorton}. To attempt to
+compensate for laws that were rarely followed and enforced,
+auto-friendly groups worked to change the public dialogue.
 Automobility was an enabling 
 force, which provided auto companies and their supporters the impetus
 to shift public standards in a particular direction, and to shape the
@@ -151,7 +150,7 @@ street to their own advantage.
 %% affected when and if automated vehicles can be said to
 
 New technologies become entwined with new social standards
-and legal principles, and technological epistemologies are deeply involved
+and legal principles, and technological narratives and epistemologies are deeply involved
 in this process: What is a road for? What is a vehicle's
 proper role? We know that a road is intended for driving precisely
 because we have been taught according to a social code that was
@@ -197,7 +196,7 @@ responsibility be apportioned between supervisors and the
 supervised?\footnote{Legal scholars note that
 torts may already be distributed across human and nonhuman actors
 (operator, owner, seller, manufacturer, distributors) in legal
-rulings \cite{suemycar} \cite{proximityLiability}. The distribution of
+rulings \cite{proximityLiability}. The distribution of
 torts to different actors in the system may vary from situation to
 situation, given the capacities of 
 the vehicle and the driver \cite[p. 267]{suemycar}. But
@@ -208,7 +207,7 @@ The question of what we can actually ask the human to do, and hold them to task
 for, is critical both for automation system design and the
 legal handling of cases involving such automation. And it requires a
 broader recognition of our networked, 
-cyborg nature,
+cyborg nature.
 %% Sidenote: important to note that issues of litigation for full autonomy are
 %% not even part of the debate yet, we just aren't at the stage where it
 %% is worth discussing
@@ -235,17 +234,17 @@ cyborg nature,
 %% currently hybrid nature, we risk having to choose between blind ludditism
 %% and equally blind technophilia.
 
+%% \footnote{They seem like failures---and they are
+%% failures for an ideology of complete technological dominance---when
+%% indeed they may be the roots of our greatest successes.}
+
 Without a recognition of our technological
-hybridity,\footnote{Fostering an appreciation of this is paramount, one of the
-  great challenges for the public understanding 
-of technology in the near future.} we are caught in a false choice:
+hybridity, we are caught in a false choice:
 either humans should drive (blind ludditism), or machines should 
 drive (equally blind technophilia). The idea that humans drive through
 machines, or machines drive 
 via humans, or that human and machine drive in combination, are
-practically incomprehensible.\footnote{They seem like failures---and they are
-failures for an ideology of complete technological dominance---when
-indeed they may be the roots of our greatest successes.} But once we
+practically incomprehensible. But once we
 recognize that we \emph{already} drive through machines, and that they
 even already may drive through us,\footnote{Consider blind-spot
 warning lights, which are an automated system designed to affect the
@@ -253,7 +252,9 @@ human and produce a response, but have no individual capacity to drive
 the vehicle.} multiple, multifaceted futures of automated vehicle
 development open to us. We are not building robotic
 chauffeurs, but rather designing ourselves, in some fashion, into more
-hybrid, more cyborg, entities.\footnote{To return to science fiction, Phillip K. Dick said in
+hybrid, more cyborg, entities. Fostering an appreciation of this is paramount, one of the
+  great challenges for the public understanding 
+of technology in the near future. \footnote{To return to science fiction, Phillip K. Dick said in
 a 1972 speech: ``Someday a human being, named perhaps Fred White, may shoot a robot
 named Pete Something-or-Other, which has come out of a General
 Electrics factory, and to his surprise see it weep and bleed. And the
@@ -317,6 +318,9 @@ policymaking---about automated vehicles and automated technologies in general.}
 %% mentioning Haraway, hers is not the vision I find most relevant for
 %% understanding automated vehicles. Instead, I would like to consider
 
+%% Our existence as a technological species is
+%% not new, and h
+
 Philosopher Andy
 Clark---drawing from a deep intellectual history that began in 1960 \cite{clyneskline}---contends that humans are ``\emph{natural-born}
 cyborgs'' \cite[p. 6]{clarkNBC}. Cyborgs are a powerful cultural
@@ -342,9 +346,8 @@ distinctive intelligence \cite[p. 5]{clarkNBC}.\footnote{While Ed
   and both have something to add to nuanced examination of automation
   systems.} This therefore holds 
 not just for cars, or information and computer technologies, but for
-all kinds of technology. Our existence as a technological species is
-not new, and human technological augmentation goes back into
-prehistory. Our engagement with technological tools and
+all kinds of technology. Human technological augmentation goes back into
+prehistory: our engagement with technological tools and
 artifacts---whether the tool is a smartphone, a loom, a wheel, or
 fire---is what makes us, fundamentally, cyborg beings.
 %% \footnote{Though Haraway holds that ``By the late 20th
@@ -386,8 +389,8 @@ This concept is particularly powerful and valuable because it
 challenges hundreds of years of assumptions about human beings and
 human achievement---even some that are deeply ingrained in supervisory
 control. We are
-possessed by the idea that our technologies change, but that the human
-being remains fundamentally the same. However, this assumption rests on a long held 
+possessed by the idea that technologies change, but that the human
+remains fundamentally the same. However, this assumption rests on a long held 
 dichotomy of human and machine, and the idea that the object of
 interest is the purely biological human \cite[p. 327, 331]{ekbia}. Cognitive
 anthropology starts to break down these 
@@ -400,9 +403,11 @@ of intelligence or capability, and instead ask how  ``humans and machines
 
 %% TODO: FIX THIS FOOTNOTE, make it clearer how it fits
 
-The problem facing AI, according to Lucy Suchman,\footnote{Note that
-  Ekbia mobilizes this statement as well in his arguments
-  \cite[p. 331-332]{ekbia}.} ``is less that we attribute agency to
+%% \footnote{Note that
+%%   Ekbia mobilizes this statement as well in his arguments
+%%   \cite[p. 331-332]{ekbia}.}
+
+The problem facing AI, according to Lucy Suchman, ``is less that we attribute agency to
 computational artifacts than that our language for talking about
 agency, whether for persons or artifacts, presupposes a field of
 discrete, self-standing entities'' \cite[p. 263]{SuchmanPlans}.
@@ -471,8 +476,7 @@ technologies.\footnote{Travel sickness is another potential barrier to
   had found minimizing or eliminating forward view made riders in
   automated PRT systems
   most comfortable.
-  Certain levels of human involvement would also reduce the perceived productivity
-  gains of automated systems, but could ameliorate travel sickness
+  Certain levels of human involvement could ameliorate travel sickness
   issues.} Though
 this may be distasteful to some technologists invested in furthering
 technological solutions to social problems, it is not fundamentally
@@ -498,8 +502,8 @@ systems that are tasked with keeping us safe, whether in space, in the
 air, or on the ground. In applying this approach, however, it is
 important to keep in mind the extent to which we are re-making
 ourselves into managers or into machine tenders:  Are we maintaining a sense of
-creative agency? Or becoming wheels in the larger machinery of capital? And
-this is especially true as we will use our 
+creative agency? Or becoming mere tools or larger organizations? This
+is especially important as we will use our  
 vehicles every day, and cannot afford to alienate ourselves from them.
 A future in which our transportation system is indifferent to us is
 not a productive future to be lauded, but a destructive one to be
@@ -546,11 +550,11 @@ users.}  Throughout, I have emphasized the contingency of current
 automated vehicle plans on specific ideas about the appropriate and
 necessary role of technology, and stressed the presence of other ways
 to regard vehicle automation technology that could bring about
-different futures. In contrast to the simplistic depictions provided by
-most media representations, which form the visible picture of this technology today
+different futures. In contrast to the simplistic depictions which form
+the visible picture of this technology today 
 for those not involved in its engineering---of pro-and-con, for-and-against, but all
 focused around a particular assumed object---I have described a
-range of alternative narratives that complicate our ideas of what
+range of alternative, cyborg, narratives that complicate our ideas of what
 automated vehicles can and will be.
 
 %%  view of the object of study, not asking
@@ -625,7 +629,7 @@ ones built to replace them.
 %% argument revolves around responsibility for the rollout of
 %% self-driving systems. On the pro-side, 
 
-One narrative trying to drive this change is that undue caution in the
+One narrative trying to drive automation based on social goods is that undue caution in the
 rollout of autonomous vehicles will directly ``cost'' lives, since
 people are killed by human drivers every day \cite{driverlessfuture}.
 This ideology posits lowering accident rates above all else, leaving
@@ -655,7 +659,12 @@ the achievements of more radical approaches would need to be compared.
 Complex changes to complex, high-stakes systems produce unpredictable
 results. So how we implement automated vehicle technology is
 about narratives, the stories we believe and tell about technology, as
-much as it is about mathematics and modeling the world. 
+much as it is about mathematics and modeling the world. When those
+stories come to define major policy documents, as they have the
+NHTSA's preliminary levels of automation, we are in a dangerous
+position moving forward into battles over regulations and
+infrastructural investments that will come to define the next era of
+the roadway.
 
 %% This is not a question
 %% of whether fully automated cars can come to exist, even as they are
@@ -669,7 +678,7 @@ the science-fiction dreams of
 driverless vehicles are possible or impossible; moreover, I believe in the
 potential of computer technologies to achieve groundbreaking results.
 But our choices should be between options, between
-visions---choices of how we integrate humans and computers to make our
+visions---how we integrate humans and computers to make our
 driving safer, our cities more livable, our lives better. The Google model which has
 captured so much press attention is one among innumerable imagined or
 not-yet-imagined possibilities. Automation is not a
@@ -742,11 +751,11 @@ and will alter the skills that human operators will be expected to
 acquire, and the types of licensing and control that are therefore
 necessary. 
 
-Third, as part of this question, how do humans interact with and
+Third, as part of this question, how do humans
 respond to AI systems that cannot simply be said to
-``think'', ``know'', or ``understand'' in the same ways that we do (at
-least not yet) but which nevertheless hold our lives in their hands?
-And how can human decision making in the design of such systems be
+``think,'' ``know,'' or ``understand'' in the same ways that we do (at
+least not yet) but nevertheless hold our lives in their hands?
+And how can human decision-making in the design of such systems be
 reasonably and successfully audited?
 These concerns may be ameliorated by human involvement and
 supervision in operations, which means we must consider what types and
@@ -811,11 +820,8 @@ obscures real complexities of operation that encounters with the world
 will inevitably involve. The important questions are when and how 
 people are
 involved, and this should be empirically not ideologically
-driven.\footnote{Of course, beliefs and ideologies are always involved
-  in decision-making, but we should at least air them for all to see,
-  and weigh them carefully, rather than blindly follow a dominant
-  idea of the uses of technology.}
-Perhaps there is hope in this altered narrative to ameliorate some of
+driven.
+There is hope in this altered narrative to ameliorate some of
 the issues facing automated vehicles today. 
 Rather than ``to automate or not to automate,'' we should ask
 ``how and why do we automate?'' Even in the most automated
@@ -836,5 +842,10 @@ that asks, knowing
 that humans remain involved, who they are, where they are, and how
 the system is being designed to serve their needs or impede their
 agency.
+
+%% \footnote{Of course, beliefs and ideologies are always involved
+%%   in decision-making, but we should at least air them for all to see,
+%%   and weigh them carefully as I have tried to do here, rather than blindly follow a dominant
+%%   idea of the uses of technology.}
 
 %% TODO make sure there isn't a hanging word!
