--- a/intro.tex
+++ b/intro.tex
@@ -638,7 +638,9 @@ electric car company, Tesla Motors, is working on an
 ``autopilot''\footnote{This name explicitly invokes aircraft
   automation, and repeats the name of Chrysler's early ``Auto Pilot''
 cruise-control system, from the late 1950s
-\cite{kesslerElon}.} mode for their cars, intended to be released publicly by
+\cite{kesslerElon}. Note that automated driving will not be available
+in residential neighborhoods because Tesla does not believe it is safe
+enough \cite{slashgearDaviesT}.} mode for their cars, intended to be released publicly by
 the summer of 2015.
 Though Tesla is clear that human involvement and judgment will be
 required at first, Musk suggests 
