--- a/chap3.tex
+++ b/chap3.tex
@@ -38,8 +38,10 @@
 % about; we'll see that this narrative was always implicit but was
 % being talked about as a failure not a strength
 
-Most automated vehicle narratives---and all those we have investigated
-so far---rest on two primary, interlocking assumptions. First, the nature of the
+%% ---and all those we have investigated so far---
+
+As we have seen, dominant automated car narratives rest on two primary,
+interlocking assumptions. First, the nature of the 
 ideal human-machine interaction for vehicle control is assumed to be
 known. Second, an inevitable progression toward not only greater
 autonomy but complete autonomy is assumed as the
@@ -60,14 +62,16 @@ advanced driver-assistance technologies and fully-self-driving
 operation with no need for human supervision are recognized as
 technologically connected, but perceived as fundamentally dichotomous
 approaches. And through all this,
-fully-automated\footnote{And as we will see in this chapter, even
+fully automated\footnote{And as we will see in this chapter, even
   so-called ``full'' autonomy would not, in practice, be so simply
   disconnected from human oversight.} operation is assumed to be the
 ultimate end goal: the ideal human-machine
 interaction is, in a sense, no human-machine interaction. This
-perspective comes from particular roots in automation history, but is
-by no means the only way to read this history or to envision automated
-systems. 
+perspective comes from particular roots in automation history, but as
+we have also seen is
+by no means the only way to read this history. We require an
+alternative paradigm with which to envision automated
+systems, one that takes joint human-machine operation seriously. 
 
 %%CUT Given these underlying
 %%similarities in terms of human-machine interaction,
@@ -96,11 +100,10 @@ overseeing the automated systems. Even if the vehicle is capable of
 performing a maneuver ``on its own,'' that operation is monitored, at
 least intermittently, by a person who can theoretically correct errors
 made by the automation.\footnote{Of course there are serious
-  limits to this capability, as HSC research shows, and as just discussed
-  in the context of airline cockpit automation.} This point is made not
+  limits to this capability, as HSC research shows.} This point is made not
 only by numerous articles describing vehicle operations in general terms,
 but by Google's
-own job postings, searching for ``vehicle safety specialists'' to join
+own job postings searching for ``vehicle safety specialists'' to join
 the self-driving car team in Mountain View. The ideal operator will
 develop ``a unique set of operational skills'' using the vehicles, and
 operate ``comfortably in a fast-paced environment, sometimes managing
@@ -132,7 +135,7 @@ are difficult to come by. Test drivers are, expectedly, required to
 %%shrouded in secrecy
 
 However, in May of 2012,
-Google tested one of these vehicles on public
+Google tested one of their vehicles on public
 roads in Nevada, in the only government test yet conducted in the United States.
 The documentation of this test---which occurred with engineers Chris
 Urmson (the project lead) and Anthony Levandowski in the front
@@ -157,13 +160,13 @@ This operational mode, then, is more properly a human supervisory, or
 joint human-machine, mode
 than an autonomous one. The study of HSC is by no means new, but
 perhaps because it does not interact with human fears of obsolescense,
-loss of agency, or robot apocalypse the way AI does---it doesn't stand
+loss of agency, or ``robot apocalypse'' the way AI does---it doesn't stand
 to damage our egos in the same way, in part because it just
 sounds rather staid and boring---it has not been as commonly
 recognized or discussed in popular narratives. And yet, supervisory
 control is implied any time an article mentions a human driver or
 co-driver monitoring a system, or taking control at a critical moment.
-However, these moments are generally implied weaknesses to the device,
+These moments are generally implied weaknesses to the device,
 as the self-driving vehicle narrative is organized around the ultimate
 goal of fully autonomous robot cars. Supervisory control, however,
 admits different goals and possibilities.
@@ -183,18 +186,17 @@ admits different goals and possibilities.
 Thomas
 Sheridan's \emph{Telerobotics, Automation, and Human Supervisory
   Control} comes out of previous work at the MIT Man-Machine Systems
-Laboratory, and is a core text in the field. Despite its
+Laboratory, and is a core text in the HSC field. Despite its
 age it remains a great introduction\footnote{And in fact, Sheridan is almost prescient in his
-  identification of the vehicle automation technologies (Advanced
-  Vehicle Control Systems, or AVCS) that would
+  identification of the vehicle automation technologies (specifically AVCS) that would
   make it to market: all of the ones he lists we see today, and the
   last (like automatic lane keeping) are really only just now becoming
-  available. Many of these technologies were in development at the
+  available \cite[p. 256]{sheridan}. Many of these technologies were in development at the
   time, as Sheridan's book came out during the middle of the Eureka
   PROMETHEUS project.} and a
 much-needed counterpoint to na\"{i}ve ideas about automation.\footnote{Human
-supervisory control history in fact 
-shares touch-points with the history of automation, coming out of
+supervisory control history
+shares touch-points with the history of factory automation, coming out of
 theories of management and human factors 
 engineering. Frederick Winslow Taylor is identified as a key player in
 this history, less for his ``dehumanizing'' approach to the worker than
@@ -203,10 +205,10 @@ his intent to generate ``a new interest in the sensorimotor aspects of
 human performance''---in other words, the way that human capabilities
 interact with the tools they use to accomplish the tasks they are
 set \cite[p. 7]{sheridan}.} Many systems involving supervisory
-control had already entered relatively common use (including
+control had already entered relatively common use before the field was
+constituted (including
 aircraft autopilots, automatic elevators, and even, perhaps arguably,
-washers and dryers \cite[p. 8]{sheridan}) before the field was
-constituted:  supervisory
+washers and dryers \cite[p. 8]{sheridan}): supervisory
 control, according to Sheridan, truly came into its own as part of
 research on the teleoperation\footnote{\emph{Teleoperation} means the
   extension of an operator's sensing and control capacity to a remote
@@ -242,7 +244,7 @@ delegated tasks \cite[p. 9]{sheridan}.
 %%   factors in engineering culture is related.} 
 
 Coming out of an idealized picture of supervision and delegation
-within management structures, supervisory control occurs when
+within human management structures, supervisory control, strictly defined, occurs when
 \begin{quote}one or more human operators are intermittently
   programming and continually receiving information from a computer
   that itself closes an autonomous control loop through artificial
@@ -260,8 +262,7 @@ implement directives from the supervisor, subject to its own
 sensors \cite[p. 3]{sheridan}. Or it may act principally ``on the
 display side,'' processing incoming sensory information into a form
 digestible for the supervisor, or, as is usual, it may do some
-both \cite[p. 3]{sheridan}. As Sheridan notes, the computer acts
-independently ``at least for short periods of time,'' and the human
+both \cite[p. 3]{sheridan}. As Sheridan notes, the human
 may assume direct control of the entire system or certain variables
 within the system at various points \cite[p. 3]{sheridan}.} is
 emblematic of the entire HSC 
@@ -305,10 +306,10 @@ Though supervisory control, as well as human factors engineering by proxy, is
 interested in mathematically modeling the human operator in her
 engagement with the control system---itself a fraught project in
 several ways\footnote{People rarely behave as ideal mathematical
-  functions, responding differently in test conditions and real life.
+  functions, and respond differently in test conditions and real life.
   The black-boxing of the operator into a stimulus-response 
 system was an issue on the X-15 \cite[p. 54]{DM} and continues to be
-problematic.}---the specifics of such modeling are not necessary to 
+problematic today.}---the specifics of such modeling are not necessary to 
 understand the concept or its application to ``self-driving'' vehicles. To provide
 a specific example of supervisory control, consider the following
 situation: a highly-automated vehicle is set up to operate in a
@@ -318,7 +319,8 @@ autonomous mode ``gear'' selection, a standard set of wheel and
 pedals, a turn signal control,
 and a cruise-control-like control stalk. The user may set a
 destination on the map interface and engage the automation from a stop, or engage
-the automation while the vehicle is in motion. The user is expected to
+the automation while the vehicle is in motion and optionally select a
+destination. The user is expected to 
 be available to assist the vehicle with maneuvers, and oversee its
 behavior:  she may take the wheel at any time to direct the vehicle,
 or use the pedals to force its speed to alter; she may request lane
@@ -468,13 +470,15 @@ requires. David Mindell,
 %% individual agents, alone,'' irrespective of the detail to which those
 %% individuals may be studied or modeled \cite[p. 265]{hutchinsCockpit}.}
 
-With our attention on supervisory control, new questions and processes
+With our attention on supervisory control, however, new questions and processes
 come into focus. If the machine is clearly no
 longer the sole component of analysis, what formerly neglected pieces
 must be considered? How do we assess system design or performance, or
 think about the ways these newly expanded devices operate? As Sheridan notes, much study of
-supervisory control has gone on elsewhere under different names. Coming instead from cognitive
-science,\footnote{And, notably, he responds to the canonical focus of
+HSC has gone on elsewhere under different names. Coming instead from cognitive
+science, Edwin Hutchins and his anthropological work on group cognition
+processes expands from the traditional focus on the individual agent
+to systems of interacting agents and technologies.\footnote{And, notably, he responds to the canonical focus of
   cognitive science on the ``mental processes that organize the
   behavior'' of an individual, a position Hutchins cites as having its
 standard statement in Newell and Simon's 1972 \emph{Human Problem
@@ -483,25 +487,9 @@ up again here, and their individualist focus perhaps sheds some
 light on why the narratives of automated vehicle technology that are
 inflected by AI are so different than they would be if told instead
 through the lens of supervisory control.}
-Edwin Hutchins and his anthropological work on group cognition
-processes expands from the traditional focus on the individual agent
-to systems of interacting agents and technologies.
 Hutchins uses the example of an airline cockpit \cite{hutchinsCockpit} to show how the cognitive
 properties of a system as a whole may be very different than those of
-individual human actors within that system.\footnote{The speed bugs discussed in ``How a Cockpit
-Remembers Its Speeds''---which note on the airspeed indicator
-important speeds at which the 
-flight characteristics of the aircraft need to be altered to maintain
-safe operations---are rudimentary, but the issues they present do not disappear with
-increased automation. Hutchins and Klausen co-wrote another
-article in 1995 titled ``Distributed Cognition in an Airline
-Cockpit,'' \cite{hutchinsKlausen} which focuses on the
-interactions of the Captain, first 
-officer, second officer, and air-traffic control. This exchange,
-though it involves control yokes, altitude alerts, and other
-technological actants, is primarily focused on the joint capabilities
-of the human crew, and presents fundamentally related cognitive
-systems issues.} Studying the humans alone,
+individual human actors within that system. Studying the humans alone,
 or the automation alone, does not suffice to explain the overall
 behavior of a joint human-machine cognitive system.
 
@@ -520,8 +508,19 @@ behavior of a joint human-machine cognitive system.
 %% Hutchins identifies a new unit of analysis:
 %% the cockpit as a whole.
 
-Hutchins is very particular that speed bugs do not na\"{\i}vely
-increase pilot memory. Instead, they 
+Hutchins is very particular that cockpit speed bugs do not na\"{\i}vely
+increase pilot memory.\footnote{The speed bugs---which note on the airspeed indicator
+important speeds at which the 
+flight characteristics of the aircraft need to be altered to maintain
+safe operations---are rudimentary, but the issues they present do not disappear with
+increased automation. Hutchins and Klausen co-wrote another
+article \cite{hutchinsKlausen} which focuses on the
+interactions of the Captain, first 
+officer, second officer, and air-traffic control. This exchange,
+though it involves control yokes, altitude alerts, and other
+technological actants, is primarily focused on the joint capabilities
+of the human crew, and presents fundamentally related cognitive
+systems issues.} Instead, they 
 are information processing tools, responsible for changing the form of
 information, giving it a new representation and altering the
 interaction with that information \cite[p. 282]{hutchinsCockpit}. The whole system can be said to
@@ -537,7 +536,7 @@ Current vehicle automation systems are more complex than the cockpit's
 visual-mechanical aides, but are appropriate subjects of the same kind
 of analysis.\footnote{As an aside, I would argue that if a number of
   modern information technologies, like smartphones, seem to have done
-relatively little to alter human beings and their capabilities, it is
+relatively little to alter human beings and their capacities, it is
 because the individual 
 is still the unit of analysis. When the unit of analysis is instead
 set at the individual plus his or her immediate technological or biological
@@ -574,14 +573,14 @@ cognitive attention to automation highlights the problem:  an
 automation system may transform a task from a complex visual task for the
 operator (e.g. driving) to another complex visual task (e.g. monitoring a control
 panel with many displays and lights, and switches to press) while the
-overall processes within and results of the system remain
+overall processes within, and results of, the system remain
 fundamentally congruent. Looking at which tasks are
 allocated where, and what the demand on human perceptual and
 decision-making systems is at any particular time, improves the
 analysis. As one should expect, 
 people drive largely based on experience and
 instinct, \cite{knaptonDriverless} not logical 
-thought, and similarly system performance should be expected to shift
+thought; and similarly, system performance should be expected to shift
 over time as interactions with automation are internalized. As
 Hutchins and Klausen describe, ``It is possible to design computer systems with open
 interfaces (Hutchins, 1990) that support learning in joint action but
@@ -616,19 +615,23 @@ Appropriately recognizing interactions is critical to successful design.
 %% from an office, the parallelism with aircraft operations returns in
 %% full force.
 
+%%  and many automated vehicle systems involve
+%% situations explicitly
+
 Complex dynamics of information transfer are critical
-for the safe operation of large-scale systems.\footnote{Hutchins and
+for the safe operation of large-scale systems. For automobiles, the
+propagation of a ``plan'' of each 
+vehicle's path on the 
+road (either within the minds of drivers or the code of an
+algorithmic system) into the state of the vehicle's controls keeps vehicles
+physically apart, parallel to the safe operation of fleets of
+aircraft.\footnote{Hutchins and
   Klausen state: ``if we step back and 
 look at the entire aviation system and ask how
 it is that aircraft are kept separated from each other, we see that it
 is through the propagation of representational state of descriptions
 of flight paths into the state of the aircraft controls
-themselves'' \cite[p. 14]{hutchinsKlausen}.} The propagation of a ``plan'' of each
-vehicle's path on the 
-road into the state of the vehicle's controls keeps vehicles
-physically apart, and many automated vehicle systems involve
-situations explicitly parallel to the safe operation of fleets of
-aircraft. There is a difference in the 
+themselves'' \cite[p. 14]{hutchinsKlausen}.} There is a difference in the 
 professionalization of pilots compared with the ``ordinary'' status of an
 everyday driver, and this difference in status and roles
 changes the amount of training we expect operators to have and the
@@ -636,10 +639,10 @@ sorts of interactions that may appeal to them, but there is no
 fundamental reason why supervisory or joint-cognitive
 systems approaches and
 experience are not applicable to automated cars, if appropriately
-moderated for the role and status of the driver. However, levels of
-automation formulations generally used to 
-talk about automated vehicles do not attend to this concept field in
-sufficient detail.
+moderated for the role and status of the driver. However, the levels of
+automation formulations generally applied to 
+describe and classify automated vehicles do not attend to this concept
+in sufficient detail.
 
 
 \section{Engineering Standards and Policy Documents}
@@ -656,17 +659,13 @@ sufficient detail.
 The engineering standards and
 policy documents set up to
 guide the industry's development---particularly levels-of-autonomy
-formulations, which come from a long history of such taxonomies \cite{parasuramanW} \cite{PSWickens} \cite{ALFUS} \cite{SMART}. T\footnote{Perhaps traceable, in a way, to 
+formulations, which come from a long history of such taxonomies \cite{parasuramanW} \cite{PSWickens} \cite{ALFUS} \cite{SMART}\footnote{Perhaps traceable, in a way, to 
   Sheridan's work \cite[p. 23]{DSB}.}---strongly shape the automated
 vehicles narratives. Developed to guide
 researchers and public agencies toward an appropriate understanding of
 automation, these documents are easily taken
 as evidence for how automated systems must or will develop in
-practice.\footnote{The Society of Automotive Engineers in particular
-  made an attempt to avoid prescriptive definitions of autonomy in
-  their work. But even a descriptive set of levels contains an
-  explicit hierarchy, which can be read as an implicit narrative of
-  progress or roadmap for development.} The primary formulations of
+practice. The primary formulations of
 levels of autonomy for self-driving cars 
 have been published by the National Highway Traffic Safety
 Administration (NHTSA) and the Society of Automotive Engineers
@@ -677,7 +676,11 @@ These reports exhibit some resonances and contradictions in how these
 organizations represent autonomous vehicles and their human
 drivers---and speak to different ideas of who the ``driver'' will be
 in automated systems. However, both make assumptions about
-the way autonomy is or will be implemented that may not ultimately be
+the way autonomy is or will be implemented\footnote{The Society of Automotive Engineers in particular
+  made an attempt to avoid prescriptive definitions of autonomy in
+  their work. But even a descriptive set of levels contains an
+  explicit hierarchy, which can be read as an implicit narrative of
+  progress or roadmap for development.} that may not ultimately be
 valid and certainly foreclose on alternative ways in
 which systems could be designed. When closely
 interrogated, they do not sufficiently heed the
@@ -725,7 +728,7 @@ of labor.
 According to the NHTSA definition, automated
 vehicles are those in which ``aspects of a safety-critical control
 function (e.g., steering, throttle, or braking) occur without direct
-driver input'' \cite[p. 3]{NHTSA}. Therefore, this definition excludes warning
+driver input'' \cite[p. 3]{NHTSA}. This definition \emph{excludes} warning
 systems that nevertheless still use ``automation'' in varying degrees,
 drawing a suspect line between monitoring and action. Though systems
 that only provide information and systems 
@@ -752,7 +755,7 @@ lights may well be ``safety critical'' in at least some situations.
 The state of the transmission 
 and drivetrain, controlled via automatic (read: automated) or manual
 shifting, is fundamentally important to throttle control and the
-ability to safely control the vehicle. And shifting represents one of
+ability to safely control the vehicle. Shifting represents one of
 several areas
 in which complex relations of human-requested and
 automatically provided operating criteria are already visible: both
@@ -778,7 +781,7 @@ approaches that are actually being used in existing vehicles.
 %% control functions, are more complicated than simply turning the
 %% steering wheel; but t
 
-The NHTSA's levels of autonomy only compound these
+The NHTSA's levels of automation only compound these
 issues with simplistic distinctions that do not account for the
 majority of ways these systems could be engineered. Level 0, or
 ``no-automation,'' represents 
@@ -807,7 +810,7 @@ This continues the agency's curious focus on the physical state of the
 driver's body, repeated in level 2 automation to make the distinction
 that now the operator can be ``disengaged from physically operating the
 vehicle by having his or her hands off the steering wheel AND foot off
-pedal at the same time'' [sic] \cite[p. 5]{NHTSA}. This description of bodily state is
+pedal [sic] at the same time'' \cite[p. 5]{NHTSA}. This description of bodily state is
 the most coherent part of the levels definitions, but makes little
 practical sense for defining automation. One can drive hands-and-feet
 free in a non-automated vehicle, for short periods of time, in the
@@ -822,25 +825,25 @@ to define legal aspects of automated vehicle policy, such as how
 vehicles are registered. (It is also worth
 noting that this clarification is
 unnecessarily normative, and does not transfer to other types of
-bodily input---like GM's abandoned ``Unicontrol'' \cite[p. 8]{wetmore}---or controls designed
+bodily input like GM's abandoned ``Unicontrol'' or controls designed
 for amputees.) Though this stipulation attempts to address what the
 human driver is actually doing, it is insufficiently granular to
 account for the various types of mental and physical effort exerted:
 from using control stalks, to monitoring for vehicles, to consulting a
 GPS or mentally planning a route, to monitoring and adjusting an
-automation system via steering-wheel based controls.While Hutchins's
+automation system via steering-wheel based controls. While Hutchins's
 cockpit remembers its speeds through a combination of 
 human activity and physical cognitive aids, the NHTSA's ``vehicle''
 may sometimes ``not perform a control function'' \cite[p. 3]{NHTSA} and
-nevertheless remain on the road. But the
+nevertheless remain on the road. But this
 preoccupation with the body results from the NHTSA's charter: the
 human is a safety liability, something to be protected. The operations
 of hands and feet represent readily visible and na\"{\i}ve distinctions
 between human and automated, even if the distinctions do not turn out
-to be particularly useful when faced with further technical scrutiny.
+to be particularly useful when faced with technical scrutiny.
 For their stated audience, primarily state lawmakers who are not
 likely to be human factors engineers or well-versed in human-machine
-interaction, these markers of human action are persuasive, but likely
+interaction, these markers of human action are persuasive but likely
 to contribute to bad policies.
 
 Further levels extend the functions which are automated. Levels 2-4
@@ -863,7 +866,7 @@ simply shuffled to the computer---system control first, monitoring of
 control second---with no new cognitive loads placed on the human as a
 result. This too is a na\"{\i}ve position that is not supported by current
 examples of automation technology, which often result in the
-generation of new types of human work (such as monitoring the
+generation of new types of human work (monitoring the
 automation system itself). This labor is implicit in the NHTSA's
 taxonomy, but not examined in great detail. The NHTSA suggests special
 training to ``authorize the operation of self-driving
@@ -885,7 +888,7 @@ such as traction and electronic stability control) \cite[p. 13]{NHTSA}.
 %%particularly binary ways; REAL PRESSURE to get it OUT THERE to guide
 %%development
 The NHTSA framework overlooks a large proportion of the actual work of
-driving, and is therefore a poor model for actually evaluating and
+driving, and is therefore a poor model for evaluating and
 regulating automated vehicle systems. Its bias toward
 full-automation, structuring the hierarchy of levels around full
 self-driving vehicles as the technological peak, slants the
@@ -916,12 +919,12 @@ systems. Their document, therefore, reinforces that narrative.
 Contrasting the NHTSA's model with the SAE's provides a deep look into
 the priorities of the organizations. The SAE document provides a full
 taxonomy of levels of automation for ``on-road motor vehicles,'' and the
-presumed audience consists of engineers not policymakers \cite{SAE}. The report
+presumed audience consists of engineers not policymakers \cite{SAE}. It
 focuses on the three ``highest'' automation levels (``conditional, high
 and full automation''), implicitly because these are the newest areas
 of research and therefore the most important. The report is careful to
 distance itself from the terms ``autonomous'' or ``self-driving'' as used
-in the media, preferring instead its own carefully-defined
+in the media, preferring instead its own carefully defined
 terminology \cite[p. 5-6]{SAE}. 
 
 The SAE report does try to square itself with NHTSA recommendations,
@@ -931,7 +934,7 @@ vehicle (in level 2 the vehicle does not monitor, and in level 3 it
 does). In contrast, the NHTSA report does not make this plain, and
 indeed a level 2 system can be said to ``relinquish control with no
 advance warning'' which should be impossible without either knowledge of the
-environment or the occurrence of a bug---the system needs something on
+environment or the occurrence of a bug: the system needs something on
 which to base its decision to ``relinquish control'' if such a decision
 can be said to be made \cite[p. 5]{NHTSA}. Rather than overloading the word ``control,''
 the SAE considers the ``dynamic driving task'' to have a number of
@@ -973,7 +976,7 @@ cognitive effort. This is implicitly connected to their inclusion of
 the lower levels of automation only ``as points of reference to help
 bound the full range of vehicle automation'' \cite[p. 2]{SAE}: they are not within
 the document's focus, which favors an implicit---to the NHTSA's
-explicit\footnote{The NHTSA explains this by deferring to existing
+explicit\footnote{The NHTSA explains this ``progressive'' focus by deferring to existing
   laws: ``Generally, these laws seem to contemplate vehicle 
 automation at Levels 3 and 4, as discussed above, i.e., some form of
 self-driving operation. 
@@ -1010,7 +1013,7 @@ car project and its ideological orientation---and is instead
 focused on incremental improvements, such electronic overrides seem more acceptable.)
 
 The SAE mentions the true complexities of driving at the report's end,
-describing how the dynamic driving task is distinct from ``driving'':
+describing how the \emph{dynamic driving task} is distinct from ``driving'':
 ``Driving entails a variety of decisions and actions, which may or may
 not involve the vehicle being in motion or even being in an active
 lane of traffic'' \cite[p. 12]{SAE}. Driving is split into Strategical, Tactical, and
@@ -1067,10 +1070,12 @@ answered by either of these autonomy formulations, but should be
 addressed by any document that attempts to describe, normalize, or
 regulate automated vehicle operations. 
 
+%% , in their report
+%% \emph{The Role of 
+%% Autonomy in DoD Systems}
+
 It should be noted that levels formulations, and their assumptions, are not without
-existing criticism. The Defense Science Board, in their report
-\emph{The Role of 
-Autonomy in DoD Systems} identifies that these levels formulations are
+existing criticism. The Defense Science Board identifies that these levels formulations are
 ``often incorrectly 
 interpreted as implying that autonomy is simply a delegation of a
 complete task to a computer, that a vehicle operates at a single level
@@ -1147,8 +1152,8 @@ space, is a matter of perspective.
 % we more broadly reshape narratives around hybrid views of the human?
 
 In a sense, these autonomy
-formulations pull together the three previous strands of this
-chapter: (1) they are influenced by science and design fictions, and seek
+formulations pull together three previous strands of this
+thesis: (1) they are influenced by science and design fictions, and seek
 to respond to the narratives of technological revolution as
 transmitted through the popular marketing of what nevertheless remain laboratory
 objects; (2) they repeat many of the mistakes of the dominant narrative of
@@ -1283,7 +1288,14 @@ systems \cite[p. 1]{woodshollnagel}\footnote{Ultimately, as Woods and
 Hollnagel point out, all cognitive systems are finite and will
 therefore also have errors, lapses, and
 failures \cite[p. 1--2]{woodshollnagel}.} Success in automation is not
-a given that the human presence degrades,\footnote{For example:
+a given that the human presence degrades,\footnote{For example, the PARC/CAST Flight Deck Automation Working Group
+found that human pilots are actively involved in mitigating risk from
+other system components, and states that ``an exclusive focus on pilot
+errors will not take into account the positive actions and decisions
+that pilots do on a frequent basis'' \cite[p. 30]{PARCCAST}.}
+but something to be  
+achieved through careful engineering of automated components and their
+human interactions.\footnote{For example:
 ``fully
 automatic systems [e.g. airbags, ABS] as well as fully
 autonomous systems depend on humans to define and limit the scope of
@@ -1292,20 +1304,13 @@ becomes more rather than less important when moving toward the
 autonomous end of the spectrum
 because it is so important to assure that the systems are
 properly designed, tested, deployed, and monitored'' \cite[p. 14-15]{NRCAutonomy}.}
-but something to be  
-achieved through careful engineering of automated components and their
-human interactions.\footnote{For example, the PARC/CAST Flight Deck Automation Working Group
-found that human pilots are actively involved in mitigating risk from
-other system components, and states that ``an exclusive focus on pilot
-errors will not take into account the positive actions and decisions
-that pilots do on a frequent basis'' \cite[p. 30]{PARCCAST}.}
 
 It seems highly unlikely that a supervisory control perspective will
 fix the potential contribution of automated vehicles to the
 surveillance state:  data gathering technologies will still be
 available, and comprehensive mapping may still be necessary for
 operations, though human supervision might reduce
-reliance on remote processing of data in the short term, and thereby
+reliance on remote processing of data in the short term and thereby
 improve privacy. In 
 any case, the potential still exists to use hardware 
 and software to try to restrain and control people's actions and
@@ -1341,7 +1346,10 @@ within the vehicle, how will that affect how likely people are to
 drive rather than take other forms of transport that could reduce,
 rather than increase, road congestion? 
 
-At the most radical and teleological, we are
+%% are not solely
+%% sources of failure to be engineered out of systems, but are also
+
+At the most radical, we are
 facing not a system of autonomous robots but fleets of telerobotic
 vehicles with closed-loop control systems providing limited autonomy,
 that are supervised by remote operators within the datacenters of
@@ -1355,22 +1363,16 @@ they are driverless cars with a human controlling the GPS''
 \cite{forbesDawson}.
 Whether the appropriate number is 5 or 5000 cars, this vision seems
 plausible, and bears similarities to current Predator UAV operations.
-It also sounds quite a bit like GM's `Autoline' concept from 1964,
-mentioned in the introduction.}
-
-But even this, though it presents certain advantages, is by no means
+It also sounds quite a bit like GM's `Autoline' concept from 1964.}
+But even this, though it presents 
+certain advantages, is by no means 
 our obvious future. Such a networked system worsens issues of privacy
 and data security. Longer time periods of unsupervised operation, and
 more limited involvement of the people within the vehicle, require
 automation technologies with greater reliability and situational
-capability, in order to reduce the risk of catastrophe for
+capability in order to reduce the risk of catastrophe for
 operators---whether that catastrophe is measured by personal death or
-system failure leading to financial ruin. Even Tesla Motors, bullish
-about its forthcoming ``autopilot'' technology, admits the limitations
-of current automated systems: automated driving will not be available
-in residential neighborhoods because Tesla does not believe it is safe
-enough \cite{slashgearDaviesT}. Human beings are not solely
-sources of failure to be engineered out of systems, but are also
+system failure leading to financial ruin. Human beings are
 successful operators and risk-mitigators, who are capable of
 performing complex and difficult tasks. And it would be wrong to
 categorize human involvement as purely a temporary requirement, until
@@ -1402,7 +1404,7 @@ might be to estrange us from vehicle operations, and thereby draw us
 to consider more seriously the ethics programmed into more ordinary software
 systems, but the effect in the dominant narrative seems to be drawing a
 clear distinction between current and future automation systems. This
-distinction, evident in the NHTSA's taxonomy, is artificial. However, 
+distinction, evident in the NHTSA's taxonomy, is artificial. But
 consistent human involvement in vehicle operations seems to open new
 doors for human acceptance. What the agency should do is consider carefully why it feels that
 ABS and traction control can be allowed to override human inputs, and
@@ -1452,11 +1454,11 @@ drivers and their future. One interviewee basically asserted that
 humans are bad drivers and that perhaps we should ``all have our
 licenses taken away,'' but later stated that ``car nuts'' should
 welcome self-driving cars because they will free up the roads for
-enthusiast use. This combination does not make sense. The
+enthusiast use. This combination is self-contradictory. The
 question of whether people will be allowed to drive also looms large
 in industry conferences, with similarly unhelpful
-responses.\footnote{Computer scientist Daniela Rus stated at an MIT 
-conference that people will still be able to
+responses.\footnote{Computer scientist Daniela Rus predicted, at an MIT 
+conference, that people will still be able to
 drive normally, sharing the roads with automated vehicles in the near
 term. This is correct, but does little to allay fears for the far future.} While
 human driving is not going away in the near future, the idea that
@@ -1477,7 +1479,7 @@ involvement in driving, there is
 the possibility of a
 middle-ground in the hybrid narrative:  future cars, using increasing
 amounts of automated safety technologies,
-may be vulnerable to the same critiques as the computerized Nissan GT-R. But these
+may be vulnerable to the same critiques as the ``overly'' computerized Nissan GT-R. But these
 vehicles could still provide a role for the human and a place for
 enthusiasts who want to be involved in vehicle operations.
 
@@ -1492,7 +1494,12 @@ multinational corporation administering a fleet of automated vehicles,
 attempting to ensure they are not being 
 hijacked or stolen, the operator functions as a supervisory
 controller, enmeshed in a complex network of human and machine
-systems. Not recognizing this as such does not make it not so:  it 
+systems involving, at in its broadest view, designers, producers,
+owners, lawmakers, and multitudes of others. In a more restricted
+sense, however, the operator is directly involved in
+operating a joint 
+human-machine system. Not recognizing this as
+such does not make it not so:  it  
 only means we are 
 likely to neglect the most important parts of the system design---in
 terms of its adoption and long-term use---by blindly following a
